--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-server.port=9090
 app:
   api:
     logging:
@@ -11,4 +10,6 @@ logging:
     com.abc.demo: DEBUG
   pattern:
     console: "%clr(%d{yyyy-MM-dd HH:mm:ss.SSS}){faint} %clr(${LOG_LEVEL_PATTERN:-%5p}) %clr(${PID:- }){magenta} %clr(---){faint} %clr([%8.15t]){faint} %clr(%-40.40logger{39}){cyan} %clr(:){faint} %X{REQUEST_ID} %m%n${LOG_EXCEPTION_CONVERSION_WORD:-%wEx}"
-spring.data.mongodb.uri=mongodb+srv://admin:5EDVL2STjeZrtKNb@mw212project.aqzid.mongodb.net/test
+
+server.port=9090
+spring.data.mongodb.uri=mongodb+srv://admin:5EDVL2STjeZrtKNb@mw212project.aqzid.mongodb.net/portfoliotracker
