--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -16,6 +16,16 @@
 	<properties>
 		<java.version>17</java.version>
 	</properties>
+
+	<repositories>
+
+		<repository>
+			<id>jitpack.io</id>
+			<url>https://jitpack.io</url>
+		</repository>
+
+	</repositories>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -50,6 +60,12 @@
 			<artifactId>commons-io</artifactId>
 			<version>2.11.0</version>
 		</dependency>
+
+		<dependency>
+        <groupId>com.github.crazzyghost</groupId>
+        <artifactId>alphavantage-java</artifactId>
+        <version>1.6.2</version>
+    </dependency>
 
 	</dependencies>
 
