--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -13,4 +13,5 @@ logging:
 
 server.port=9090
 spring.data.mongodb.uri=mongodb+srv://admin:5EDVL2STjeZrtKNb@mw212project.aqzid.mongodb.net/portfoliotracker
+spring.data.mongodb.auto-index-creation=true
 jwt.secret=04bee8f2-530c-4e5d-b416-9ecff29c5d75
